
SVN
-------------------------------

XML:   Resolved issue CASTOR-1604 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Fix two test case failures (one regression, one not)
       Details: http://jira.codehaus.org/browse/CASTOR-1604
       (Edward - 20061002)

XML:   Resolved issue CASTOR-1593 using contribution from M.-Leander Reimer [l.reimer@adaptions.de]
       Fixed problem with AnyNode not preserving whitespace during unmarshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1593
       (Werner - 20061002)

XML:   Resolved issue CASTOR-1591 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Cleanup and bug fixes for test framework.
       Details: http://jira.codehaus.org/browse/CASTOR-1591
       (Werner - 20061002)

XML:   Resolved issue CASTOR-1599 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with incorrect code generation for element definitions/references pointing to 
       an abstract complex type
       Details: http://jira.codehaus.org/browse/CASTOR-1599
       (Werner - 20061001)
 
XML:   Resolved issue CASTOR-1335 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with code generated for <xsd:choice> elements with primitive and Object types mixed.
       Details: http://jira.codehaus.org/browse/CASTOR-1335
       (Werner - 20061001)

XML:   Resolved issue CASTOR-1595 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Refactored SourceGenerator class, moving parts to separate code artefacts.
       Details: http://jira.codehaus.org/browse/CASTOR-1595
       (Werner - 20061001)

XML:   Resolved issue CASTOR-1585 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added property to disable selected features on SAX2 parser used internally by Castor XML.
       Details: http://jira.codehaus.org/browse/CASTOR-1585
       (Werner - 20060930)
