@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<Convoyeur xmlDBId="xmlDBId"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:noNamespaceSchemaLocation="test.xsd">
+	<PublicationID>PublicationID</PublicationID>
+</Convoyeur>
